--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ on:
     branches: [ main ]
 
 env:
-  DOCKERHUB_USERNAME: your_dockerhub_username
-  IMAGE_NAME: jmeter-custom
+  DOCKERHUB_USERNAME: sazhnovperformance
+  IMAGE_NAME: jmeter-cloud
 
 jobs:
   build:
@@ -23,8 +23,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image with plugins baked in
         run: |
