--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,4 +31,4 @@ jobs:
           docker build             --build-arg JMETER_PLUGINS=${{ env.JMETER_PLUGINS }}             -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
 
       - name: Push to Docker Hub
-        run: docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
+        run: docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:5.6.3
